crates/bijux-dna-pipelines/tests/snapshots/bijux-dna-pipelines__contracts__bam_adna_shotgun_profile.snap
---
source: crates/bijux-dna-pipelines/tests/contracts/profiles/profiles.rs
assertion_line: 123
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "capabilities": {
    "batch_semantics": {
      "cohort_stages": [],
      "per_sample_stages": [
        "bam.validate",
        "bam.mapping_summary",
        "bam.filter",
        "bam.length_filter",
        "bam.damage",
        "bam.authenticity",
        "bam.contamination",
        "bam.coverage"
      ],
      "shared_reference_stages": []
    },
    "evidence_summary": {
      "final_caveat_topics": [
        "post_mortem_damage",
        "low_coverage_uncertainty"
      ],
      "story_order": [
        "bam_admission",
        "damage_evidence",
        "contamination_evidence",
        "qc_summary"
      ]
    },
    "failure_policy": [
      {
        "action": "skip_failed_sample",
        "allows_partial_batch": true,
        "downstream_effect": "samples that fail BAM integrity checks are skipped with explicit refusal evidence",
        "stage_family": "ingestion"
      },
      {
        "action": "skip_failed_sample",
        "allows_partial_batch": true,
        "downstream_effect": "failed preprocessing blocks downstream sample metrics while batch peers continue",
        "stage_family": "preprocessing"
      },
      {
        "action": "continue_cohort",
        "allows_partial_batch": true,
        "downstream_effect": "cohort summaries proceed with missing-sample caveats and retained refusal reasons",
        "stage_family": "reporting"
      }
    ],
    "input_artifacts": [
      "Bam"
    ],
    "input_domains": [
      "Bam"
    ],
    "output_artifacts": [
      "Bam",
      "MetricsBundle"
    ],
    "output_domains": [
      "Bam"
    ],
    "parameter_policy": {
      "configurable_by_stage": {
        "bam.contamination": [
          "minimum_mean_coverage",
          "scope"
        ],
        "bam.damage": [
          "pmd_threshold_5p",
          "pmd_threshold_3p"
        ]
      },
      "expert_mode_required_for_locked_overrides": true,
      "locked_by_stage": {
        "bam.authenticity": [
          "disallow_certification"
        ]
      }
    },
    "produces_outputs": [
      "bam",
      "bam.metrics"
    ],
    "report_sections": [
      "bam"
    ],
    "required_artifacts": [
      "report.json",
      "run_manifest.json",
      "stage_summaries.json",
      "invariants_report.json"
    ],
    "required_inputs": [
      "bam"
    ],
    "required_metrics": [
      "bam.metrics"
    ],
    "required_metrics_bundles": [
      "BamAdna"
    ],
    "required_report_sections": [
      "Bam",
      "PipelineDefaults"
    ],
    "required_stages": [
      "bam.validate",
      "bam.qc_pre",
      "bam.mapping_summary",
      "bam.filter",
      "bam.mapq_filter",
      "bam.length_filter",
      "bam.duplication_metrics",
      "bam.complexity",
      "bam.coverage",
      "bam.endogenous_content",
      "bam.overlap_correction",
      "bam.damage",
      "bam.authenticity",
      "bam.contamination",
      "bam.sex"
    ],
    "supports_benchmarks": true,
    "supports_sample_sheet": false,
    "workflow_template_ids": [
      "bam.ancient_dna_qc"
    ]
  },
  "defaults": {
    "params": {
      "bam.authenticity": {
        "disallow_certification": true,
        "evidence_only": true,
        "mode": "aggregate"
      },
      "bam.complexity": {
        "min_reads": 100000,
        "projection_points": [
          1000000,
          2000000
        ]
      },
      "bam.contamination": {
        "assumptions": null,
        "chromosome_system": null,
        "emit_confidence_caveats": true,
        "minimum_mean_coverage": 0.5,
        "prior": null,
        "reference_panels": [],
        "required_reference_digest": null,
        "scope": "both",
        "sex_specific": false
      },
      "bam.coverage": {
        "depth_thresholds": [
          1,
          3,
          5
        ],
        "regime_mode": "advisory_and_enforced",
        "regions": null
      },
      "bam.damage": {
        "damage_tool_profile": "ancient_dna_evidence",
        "evidence_only": true,
        "pmd_threshold_3p": 0.3,
        "pmd_threshold_5p": 0.3,
        "trim_3p": 2,
        "trim_5p": 2,
        "udg_model": "non_udg"
      },
      "bam.duplication_metrics": {
        "duplicate_action": "mark",
        "optical_duplicates": "mark_only",
        "umi_policy": "ignore"
      },
      "bam.endogenous_content": {
        "depth_thresholds": [
          1
        ],
        "host_reference_digest": null,
        "host_reference_scope": "host_reference_required",
        "refuse_without_host_reference": true,
        "regions": null
      },
      "bam.filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.length_filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 0,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.mapping_summary": {
        "regions": null
      },
      "bam.mapq_filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 0,
        "remove_duplicates": false
      },
      "bam.overlap_correction": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 0,
        "min_length": 0,
        "remove_duplicates": false
      },
      "bam.qc_pre": {
        "regions": null
      },
      "bam.sex": {
        "chromosome_system": "xy",
        "expected_sex": null,
        "method": "rxy",
        "minimum_y_sites": 100,
        "refuse_without_context": true
      },
      "bam.validate": {
        "strict": true
      }
    },
    "rationales": {
      "bam.authenticity": "pipeline default",
      "bam.complexity": "pipeline default",
      "bam.contamination": "pipeline default",
      "bam.coverage": "pipeline default",
      "bam.damage": "pipeline default",
      "bam.duplication_metrics": "pipeline default",
      "bam.endogenous_content": "pipeline default",
      "bam.filter": "pipeline default",
      "bam.length_filter": "pipeline default",
      "bam.mapping_summary": "pipeline default",
      "bam.mapq_filter": "pipeline default",
      "bam.overlap_correction": "pipeline default",
      "bam.qc_pre": "pipeline default",
      "bam.sex": "pipeline default",
      "bam.validate": "pipeline default"
    },
    "tools": {
      "bam.authenticity": "authenticct",
      "bam.complexity": "preseq",
      "bam.contamination": "schmutzi",
      "bam.coverage": "mosdepth",
      "bam.damage": "mapdamage2",
      "bam.duplication_metrics": "samtools",
      "bam.endogenous_content": "samtools",
      "bam.filter": "samtools",
      "bam.length_filter": "samtools",
      "bam.mapping_summary": "samtools",
      "bam.mapq_filter": "samtools",
      "bam.overlap_correction": "bamutil",
      "bam.qc_pre": "samtools",
      "bam.sex": "rxy",
      "bam.validate": "samtools"
    }
  },
  "defaults_ledger_ref": "defaults_ledger.json",
  "description": "Ancient DNA shotgun defaults",
  "id": "bam-to-bam__adna_shotgun__v1",
  "input_domains": [
    "Bam"
  ],
  "invariants_preset": "adna",
  "library_model": {
    "assay_kind": "shotgun",
    "layout": "paired_end",
    "platform_hint": "illumina",
    "udg_treatment": "none"
  },
  "output_domains": [
    "Bam"
  ],
  "stability": "Beta"
}
