crates/bijux-dna-pipelines/tests/snapshots/bijux-dna-pipelines__contracts__bam_default_profile.snap
---
source: crates/bijux-dna-pipelines/tests/contracts/profiles/profiles.rs
assertion_line: 24
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "capabilities": {
    "input_artifacts": [
      "Bam"
    ],
    "input_domains": [
      "Bam"
    ],
    "output_artifacts": [
      "Bam",
      "MetricsBundle"
    ],
    "output_domains": [
      "Bam"
    ],
    "produces_outputs": [
      "bam",
      "bam.metrics"
    ],
    "report_sections": [
      "bam"
    ],
    "required_artifacts": [
      "report.json",
      "run_manifest.json",
      "stage_summaries.json"
    ],
    "required_inputs": [
      "bam"
    ],
    "required_metrics": [
      "bam.metrics"
    ],
    "required_metrics_bundles": [
      "BamCore"
    ],
    "required_report_sections": [
      "Bam",
      "PipelineDefaults"
    ],
    "required_stages": [
      "bam.validate",
      "bam.qc_pre",
      "bam.filter",
      "bam.coverage",
      "bam.damage"
    ],
    "supports_benchmarks": true
  },
  "defaults": {
    "params": {
      "bam.coverage": {
        "depth_thresholds": [
          1,
          3,
          5
        ],
        "regions": null
      },
      "bam.damage": {
        "pmd_threshold_3p": 0.3,
        "pmd_threshold_5p": 0.3,
        "trim_3p": 2,
        "trim_5p": 2,
        "udg_model": "non_udg"
      },
      "bam.filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.qc_pre": {
        "regions": null
      },
      "bam.validate": {
        "strict": true
      }
    },
    "rationales": {
      "bam.coverage": "pipeline default",
      "bam.damage": "pipeline default",
      "bam.filter": "pipeline default",
      "bam.qc_pre": "pipeline default",
      "bam.validate": "pipeline default"
    },
    "tools": {}
  },
  "defaults_ledger_ref": "defaults_ledger.json",
  "description": "Default BAM pipeline",
  "id": "bam-to-bam__default__v1",
  "input_domains": [
    "Bam"
  ],
  "invariants_preset": null,
  "output_domains": [
    "Bam"
  ],
  "stability": "Stable"
}
